# iterative_spline_parameterization

./: .travis.yml  CMakeLists.txt  README.md  package.xml
cmake/: iterative_spline_parameterization-config.cmake.in
include/iterative_spline_parameterization/: iterative_spline_parameterization.h
src/: iterative_spline_parameterization.cpp
